objects/mcdm_15__DefaultCampaignPersonalization__c.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__blockId__c</fullName>
        <description>The identifying ID for the Block that the Default Personalization is for</description>
        <label>Block ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__campaignId__c</fullName>
        <description>The Salesforce ID of Campaign this Default Personalization is for</description>
        <label>campaignId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__isGlobalSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This default personalization is a global configuration</description>
        <inlineHelpText>Indicates the default personalization is a global setting.</inlineHelpText>
        <label>Is Global Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__lookupId__c</fullName>
        <description>The ID corresponding to the object being personalized</description>
        <label>Lookup ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__lookupType__c</fullName>
        <description>The type for the corresponding Lookup ID field</description>
        <label>Lookup Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__value__c</fullName>
        <description>The value of the Default Personalization</description>
        <label>value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Default Campaign Personalization</label>
    <nameField>
        <displayFormat>DCP-{0}</displayFormat>
        <label>Default Campaign Personalization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Campaign Personalizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>